tests/rosetta/out/Rust/99-bottles-of-beer.error
rustc error: exit status 1
error[E0308]: mismatched types
  --> /tmp/TestMochiToRust99-bottles-of-beer3215085846/001/prog.rs:10:16
   |
3  |     fn bottles(n: i32) -> &'static str {
   |                           ------------ expected `&str` because of return type
...
10 |         return format!("{}{}", n.to_string(), " bottles");
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&str`, found `String`
   |
   = note: this error originates in the macro `format` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
