tests/rosetta/out/Rust/99-bottles-of-beer.rs
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:39:38Z
fn main() {
    fn bottles(n: i32) -> &'static str {
        if n == 0 {
            return "No more bottles";
        }
        if n == 1 {
            return "1 bottle";
        }
        return format!("{}{}", n.to_string(), " bottles");
    }
    fn main() -> () {
        let mut i = 99;
        while i > 0 {
            println!("{}", format!("{}{}", bottles(i), " of beer on the wall"));
            println!("{}", format!("{}{}", bottles(i), " of beer"));
            println!("Take one down, pass it around");
            println!("{}", format!("{}{}", bottles(i - 1), " of beer on the wall"));
            i -= 1;
        }
    }
    main();
}
